Fix issue where image captions wrap when the image is narrower than the main content column.

--- a/scss/blog/_grid.scss
+++ b/scss/blog/_grid.scss
@@ -29,7 +29,7 @@
 
 .caption {
 	margin-top: 0.50em;
-	display: inline-block;
+	display: block;
 }
 
 .images {
